| Bug #8786 | ndb_autodiscover, drop index can fail, wait 2 minutes timeout | ||
|---|---|---|---|
| Submitted: | 24 Feb 2005 17:46 | Modified: | 25 Feb 2005 9:18 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | OS: | ||
| Assigned to: | Jonas Oreland | Target Version: | |
[24 Feb 2005 17:46]
Jonas Oreland
