bug#8786 - ndb autodiscover, sometimes fails   remove dict forwarding   add api retries on NotMaster